--- a/proxy-server.properties
+++ b/proxy-server.properties
@@ -8,3 +8,5 @@ eureka.client.service-url.default-zone=http://localhost:8761
 
 # routes for mapping url
 zuul.routes.articles-service=/atricle/**
+zuul.routes.orders-service=/orders/**
+zuul.routes.follow-order-service=/follow/**
