--- a/follow-order-service.properties
+++ b/follow-order-service.properties
@@ -3,6 +3,7 @@ server.port 9092
 # Config H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:tempdb
 
 # Eureka client config
 eureka.client.service-url.default-zone=http://localhost:8761
